objects/DMAPP__Insight_Smart_Business_Map_Industry__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Dealmaker ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Industry__c</fullName>
        <label>Insight Industry</label>
        <referenceTo>DMAPP__Insight_Industry__c</referenceTo>
        <relationshipLabel>Insight Smart Business Map Industries</relationshipLabel>
        <relationshipName>Insight_Smart_Business_Map_Industries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Smart_Business_Map__c</fullName>
        <label>Insight Smart Business Map</label>
        <referenceTo>DMAPP__Insight_Smart_Business_Map__c</referenceTo>
        <relationshipLabel>Insight Smart Business Map Industries</relationshipLabel>
        <relationshipName>Insight_Smart_Business_Map_Industries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Insight Smart Business Map Industry</label>
    <nameField>
        <displayFormat>ISBMI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insight Smart Business Map Industries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DMAPP__Prevent_Field_Update</fullName>
        <active>true</active>
        <description>Prevents users updating the Field</description>
        <errorConditionFormula>ISCHANGED(DMAPP__DealmakerID__c)</errorConditionFormula>
        <errorDisplayField>DMAPP__DealmakerID__c</errorDisplayField>
        <errorMessage>The Dealmaker ID field cannot be updated after creation</errorMessage>
    </validationRules>
</CustomObject>